--- a/public/categorias.html
+++ b/public/categorias.html
@@ -17,6 +17,8 @@
             <h1>Categorias</h1>
             <label>Codigo</label><input id="txtMensaje" type="text" class="form-control"><br>
             <label>Nombre</label><input id="txtMensaje" type="text" class="form-control"><br>
+            
+            <button type="submit" value="Guardar" name="Guardar" >Guardar</button>
             <!--<div class="form-check">
                 <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
                 <label class="form-check-label" for="flexRadioDefault1">
